(lang dune 3.16)

(name CompEsseML)

(generate_opam_files true)

(source
 (github yuliosity/compesseml))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name CompEsseML)
 (synopsis "Compiler Essentials in OCaml")
 (description "Exercises from the 'Compiler Essentials' book by Jeremy Siek, implemented in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
